--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
 Django==1.10.6
+django-filter==1.0.1
+djangorestframework==3.6.1
 mysqlclient==1.3.10
+numpy==1.12.0
+pandas==0.19.2
 psycopg2==2.7
+python-dateutil==2.6.0
+pytz==2016.10
+rest-pandas==0.5.0
+six==1.10.0
