--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
+amqp==2.1.4
+Babel==2.3.4
+billiard==3.5.0.2
+celery==4.0.2
 Django==1.10.6
 django-filter==1.0.1
 djangorestframework==3.6.1
+flower==0.9.1
+kombu==4.0.2
 mysqlclient==1.3.10
 numpy==1.12.0
 pandas==0.19.2
 psycopg2==2.7
 python-dateutil==2.6.0
 pytz==2016.10
+redis==2.10.5
 rest-pandas==0.5.0
 six==1.10.0
+tornado==4.2
+vine==1.1.3
