--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,18 @@ amqp==2.2.2
 Babel==2.5.3
 billiard==3.5.0.3
 celery==4.1.0
+dj-database-url==0.4.2
 Django==2.0.2
-django-autocomplete-light==3.2.10
 django-filter==1.1.0
 django-flat-responsive==2.0
 djangorestframework==3.7.7
 flower==0.9.2
+gunicorn==19.7.1
 kombu==4.1.0
 numpy==1.14.0
+olefile==0.45.1
 pandas==0.22.0
+Pillow==5.0.0
 psycopg2==2.7.4
 python-dateutil==2.6.1
 pytz==2018.3
@@ -19,3 +22,4 @@ rest-pandas==1.0.0
 six==1.11.0
 tornado==4.5.3
 vine==1.1.4
+whitenoise==3.3.1
