--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ billiard==3.5.0.3
 celery==4.1.0
 dj-database-url==0.4.2
 Django==2.0.2
+django-dotenv==1.4.2
 django-filter==1.1.0
-django-flat-responsive==2.0
 djangorestframework==3.7.7
 flower==0.9.2
 gunicorn==19.7.1
@@ -15,6 +15,7 @@ olefile==0.45.1
 pandas==0.22.0
 Pillow==5.0.0
 psycopg2==2.7.4
+psycopg2-binary==2.7.5
 python-dateutil==2.6.1
 pytz==2018.3
 redis==2.10.6
