--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,6 @@ jobs:
     docker:
       - image: circleci/python:3.6.4
         environment:
-          PIPENV_VENV_IN_PROJECT: true
           DJANGO_SETTINGS_MODULE: base.settings.heroku
           DATABASE_URL: postgresql://root@localhost/circle_test?sslmode=disable
       - image: circleci/postgres:9.6.2
@@ -21,8 +20,7 @@ jobs:
       - run:
           command: |
             cp .env.example .env
-            sudo pip install pipenv
-            pipenv install
+            pip install -r requirements.txt
       - save_cache:
           key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
           paths:
@@ -31,7 +29,7 @@ jobs:
             - "/usr/local/lib/python3.6/site-packages"
       - run:
           command: |
-            pipenv run "python manage.py test"
+            python manage.py test
       - store_test_results:
           path: test-results
       - store_artifacts:
