--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
     # volumes:
     #   - ./persistent/redis-data:/data
   web:
-    # environment:
+    environment:
+      - PIPENV_VENV_IN_PROJECT=true
     #   - DJANGO_SETTINGS_MODULE=base.settings.dev
     build: .
     volumes:
@@ -22,6 +23,7 @@ services:
     depends_on:
       - db
       - redis
+    # command: pipenv run python manage.py runserver 0.0.0.0:${WEB_HOST}
     command: python3 manage.py runserver 0.0.0.0:${WEB_HOST}
     # command: ["./wait-for-it.sh", "db:5432", "--", "python3", "manage.py", "runserver", "0.0.0.0:8000"]
   celery_worker:
