--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,5 @@ SECRET_KEY=@b&8sbng*xn$9+i1)vr%h5u9b!hk)(c0bx4k2=ki2nzm7ak!&0
 
 WEB_HOST=8888
 FLOWER_PORT=5555
+
+ADMIN_SITE_HEADER=Base Django administration
