--- a/Pipfile
+++ b/Pipfile
@@ -29,9 +29,10 @@ whitenoise = "==3.3.1"
 Babel = "==2.5.3"
 Django = "==2.0.2"
 Pillow = "==5.0.0"
-coverage = "*"
 
 [dev-packages]
+pylint = "*"
+coverage = "*"
 
 [requires]
 python_version = "3.6"
