--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,6 @@ amqp = "==2.2.2"
 billiard = "==3.5.0.3"
 celery = "==4.1.0"
 dj-database-url = "==0.4.2"
-django-dotenv = "==1.4.2"
 django-filter = "==1.1.0"
 djangorestframework = "==3.7.7"
 flower = "==0.9.2"
@@ -29,6 +28,7 @@ whitenoise = "==3.3.1"
 Babel = "==2.5.3"
 Django = "==2.0.2"
 Pillow = "==5.0.0"
+python-dotenv = "*"
 
 [dev-packages]
 pylint = "*"
