--- a/Pipfile
+++ b/Pipfile
@@ -29,6 +29,7 @@ Babel = "==2.5.3"
 Django = "==2.0.2"
 Pillow = "==5.0.0"
 python-dotenv = "*"
+django-debug-toolbar = "*"
 
 [dev-packages]
 pylint = "*"
