--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,24 @@
-DOTENV=True
 ENVIRONMENT=development
 
-DB_DBNAME=postgres
-DB_USER=postgres
-DB_PASSWORD=
-DB_HOST=db
-DB_PORT=5432
-DB_EXPOSE_PORT=5432
+RABBITMQ_EXPOSE_PORT=5674
+RABBITMQ_MANAGEMENT_EXPOSE_PORT=15674
+RABBITMQ_DEFAULT_USER=admin
+RABBITMQ_DEFAULT_PASS=rabbit@2019
 
-REDIS_HOST=redis
+FLOWER_EXPOSE_PORT=9998
+
+PGADMIN_PORT=9081
+PGADMIN_DEFAULT_EMAIL=admin@yourwebsite.com
+PGADMIN_DEFAULT_PASSWORD=yourwebsite
+
+POSTGRES_DEFAULT_USER=postgres
+POSTGRES_DEFAULT_PASSWORD=postgres
+POSTGRES_DEFAULT_DB=postgres
+POSTGRES_DEFAULT_HOST=postgres
+POSTGRES_DEFAULT_PORT=5432
 
 SECRET_KEY=@b&8sbng*xn$9+i1)vr%h5u9b!hk)(c0bx4k2=ki2nzm7ak!&0
 
-WEB_HOST=8888
-FLOWER_PORT=5555
+WEB_HOST=9999
 
 ADMIN_SITE_HEADER=Base Django administration
