--- a/Pipfile
+++ b/Pipfile
@@ -9,13 +9,13 @@ billiard = "==3.5.0.3"
 celery = "==4.1.0"
 dj-database-url = "==0.4.2"
 django-filter = "==2.0"
-djangorestframework = "==3.8.2"
+djangorestframework = "==3.10.2"
 flower = "==0.9.2"
 gunicorn = "==19.7.1"
 kombu = "==4.1.0"
-numpy = "==1.14.0"
+numpy = "==1.14.5"
 olefile = "==0.45.1"
-pandas = "==0.22.0"
+pandas = "==0.23.3"
 "psycopg2-binary" = "==2.7.5"
 python-dateutil = "==2.6.1"
 pytz = "==2018.3"
@@ -26,10 +26,11 @@ tornado = "==4.5.3"
 vine = "==1.1.4"
 whitenoise = "==3.3.1"
 Babel = "==2.5.3"
-Django = "==2.1"
-Pillow = "==5.0.0"
+Django = "==2.2"
+Pillow = "==5.2.0"
 python-dotenv = "*"
 django-debug-toolbar = "*"
+watchdog = "*"
 
 [dev-packages]
 pylint = "*"
@@ -37,4 +38,4 @@ coverage = "*"
 yapf = "*"
 
 [requires]
-python_version = "3.6"
+python_version = "3.7"
