--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,36 @@
 -i https://pypi.org/simple
-amqp==2.2.2
+amqp==2.5.2
 argh==0.26.2
-babel==2.5.3
-billiard==3.5.0.3
-celery==4.1.0
-dj-database-url==0.4.2
+asgiref==3.2.3
+babel==2.7.0
+billiard==3.6.1.0
+celery==4.4.0
+dj-database-url==0.5.0
 django-debug-toolbar==2.1
 django-filter==2.0
-django==2.2.8
-djangorestframework==3.10.2
-flower==0.9.2
-gunicorn==19.7.1
-kombu==4.1.0
-numpy==1.14.5
-olefile==0.45.1
-pandas==0.23.3
+django==3.0
+djangorestframework==3.11.0
+flower==0.9.3
+gunicorn==20.0.4
+importlib-metadata==1.3.0 ; python_version < '3.8'
+kombu==4.6.7
+more-itertools==8.0.2
+numpy==1.17.4
+olefile==0.46
+pandas==0.25.3
 pathtools==0.1.2
-pillow==6.2.0
-psycopg2-binary==2.7.5
-python-dateutil==2.6.1
+pillow==6.2.1
+psycopg2-binary==2.8.4
+python-dateutil==2.8.1
 python-dotenv==0.10.3
-pytz==2018.3
+pytz==2019.3
 pyyaml==5.2
-redis==2.10.6
-rest-pandas==1.0.0
-six==1.11.0
+redis==3.3.11
+rest-pandas==1.1.0
+six==1.13.0
 sqlparse==0.3.0
-tornado==4.5.3
-vine==1.1.4
+tornado==5.1.1
+vine==1.3.0
 watchdog==0.9.0
-whitenoise==3.3.1
+whitenoise==5.0.1
+zipp==0.6.0
