--- a/Pipfile
+++ b/Pipfile
@@ -31,11 +31,13 @@ python-dotenv = "*"
 django-debug-toolbar = "*"
 watchdog = "*"
 tornado = "==5.1.1"
+graphene-django = ">=2.0"
 
 [dev-packages]
 pylint = "*"
 coverage = "*"
 yapf = "*"
+autopep8 = "*"
 
 [requires]
 python_version = "3.7"
