--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 -i https://pypi.org/simple
 amqp==2.5.2
+aniso8601==7.0.0
 argh==0.26.2
 asgiref==3.2.3
 babel==2.7.0
@@ -11,6 +12,10 @@ django-filter==2.0
 django==3.0
 djangorestframework==3.11.0
 flower==0.9.3
+graphene-django==2.7.1
+graphene==2.1.8
+graphql-core==2.2.1
+graphql-relay==2.0.1
 gunicorn==20.0.4
 importlib-metadata==1.3.0 ; python_version < '3.8'
 kombu==4.6.7
@@ -20,6 +25,7 @@ olefile==0.46
 pandas==0.25.3
 pathtools==0.1.2
 pillow==6.2.1
+promise==2.3
 psycopg2-binary==2.8.4
 python-dateutil==2.8.1
 python-dotenv==0.10.3
@@ -27,6 +33,8 @@ pytz==2019.3
 pyyaml==5.2
 redis==3.3.11
 rest-pandas==1.1.0
+rx==1.6.1
+singledispatch==3.4.0.3
 six==1.13.0
 sqlparse==0.3.0
 tornado==5.1.1
