--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,10 @@ POSTGRES_DEFAULT_PORT=5432
 
 SECRET_KEY=@b&8sbng*xn$9+i1)vr%h5u9b!hk)(c0bx4k2=ki2nzm7ak!&0
 
+MAILGUN_API_KEY=8d3762f27058eab08db08f85edf86fff-73ae490d-3e78a79c
+MAILGUN_SENDER_DOMAIN=sandbox0dca72048a8748c79517d757ec4e4347.mailgun.org	
+DEFAULT_FROM_EMAIL=linhnvh@icts.vn
+
 WEB_HOST=9999
 
 ADMIN_SITE_HEADER=Base Django administration
