--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ django-debug-toolbar = "^3.1.1"
 watchdog = "^0.10.3"
 tornado = "^6.1"
 graphene-django = "^2.13.0"
+PyYAML = "^5.3.1"
+uritemplate = "^3.0.1"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.4"
