--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,39 +1,40 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/circleci-demo-python-django
+    working_directory: ~/app
     docker:
-      - image: circleci/python:3.6.4
+      - image: circleci/python:3.8.6
         environment:
-          PIPENV_VENV_IN_PROJECT: true
           DJANGO_SETTINGS_MODULE: base.settings.circleci
-          DATABASE_URL: postgresql://root@localhost/circle_test?sslmode=disable
-      - image: circleci/postgres:9.6.2
+      - image: circleci/mysql:8.0.17
+        command: [--default-authentication-plugin=mysql_native_password]
         environment:
-          POSTGRES_USER: root
-          POSTGRES_DB: circle_test
+          MYSQL_ROOT_PASSWORD: rootpw
+          MYSQL_DATABASE: test_db
+          MYSQL_USER: user
+          MYSQL_PASSWORD: passw0rd
     steps:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
-      - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
+      - run: sudo chown -R circleci:circleci /usr/local/lib/python3.8/site-packages
       - restore_cache:
-          key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+          key: deps9-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
           command: |
             cp .env.example .env
-            sudo pip install pipenv
-            pipenv install
+            pip install -r requirements.txt
       - save_cache:
-          key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+          key: deps9-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
             - ".venv"
             - "/usr/local/bin"
-            - "/usr/local/lib/python3.6/site-packages"
+            - "/usr/local/lib/python3.8/site-packages"
       - run:
           command: |
-            pipenv run "python manage.py test -v 2"
-      - store_test_results:
-          path: test-results
+            coverage run --omit '.venv/*' --source='.' manage.py test -v 2
+            coverage html
+      - store_test_results: # TODO: need to fix
+          path: htmlcov
       - store_artifacts:
-          path: test-results
-          destination: tr1
+          path: htmlcov
+          destination: htmlcov
