--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,11 @@ jobs:
       - image: circleci/python:3.8.6
         environment:
           DJANGO_SETTINGS_MODULE: base.settings.circleci
-      - image: circleci/mysql:8.0.17
-        command: [--default-authentication-plugin=mysql_native_password]
+          DATABASE_URL: postgresql://root@localhost/circle_test?sslmode=disable
+      - image: circleci/postgres:9.6.2
         environment:
-          MYSQL_ROOT_PASSWORD: rootpw
-          MYSQL_DATABASE: test_db
-          MYSQL_USER: user
-          MYSQL_PASSWORD: passw0rd
+          POSTGRES_USER: root
+          POSTGRES_DB: circle_test
     steps:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
