--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,10 @@ POSTGRES_DB=postgres
 POSTGRES_HOST=127.0.0.1
 POSTGRES_EXPOSE_PORT=5432
 
+SUPERUSER_USERNAME=trung@icts.vn
+SUPERUSER_EMAIL=trung@icts.vn
+SUPERUSER_PASSWORD=icts@2015
+
 SECRET_KEY=@b&8sbng*xn$9+i1)vr%h5u9b!hk)(c0bx4k2=ki2nzm7ak!&0
 
 WEB_HOST=9999
