--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
-version: '3'
+version: "3"
 
 services:
   rabbit:
     image: rabbitmq:3-management
+    restart: always
     environment:
       - RABBITMQ_DEFAULT_USER=${RABBITMQ_DEFAULT_USER}
       - RABBITMQ_DEFAULT_PASS=${RABBITMQ_DEFAULT_PASS}
@@ -10,7 +11,7 @@ services:
       - "${RABBITMQ_EXPOSE_PORT}:5672"
       - "${RABBITMQ_MANAGEMENT_EXPOSE_PORT}:15672"
     logging:
-      driver: 'none'
+      driver: "none"
   postgres:
     image: postgres:13
     restart: always
@@ -25,22 +26,29 @@ services:
 
   redis:
     image: redis:6
+    restart: always
     command: ["redis-server", "--appendonly", "yes"]
     hostname: redis
     volumes:
       - ./data/redis-data:/data
-    ports:  
+    ports:
       - ${REDIS_EXPOSE_PORT}:6379
     logging:
-      driver: 'none'
-  
+      driver: "none"
+
   flower:
     image: mher/flower
-    command: ["flower", "--broker=amqp://${RABBITMQ_DEFAULT_USER}:${RABBITMQ_DEFAULT_PASS}@rabbit:5672", "--port=8888"]  
-    ports:  
+    command:
+      [
+        "flower",
+        "--broker=amqp://${RABBITMQ_DEFAULT_USER}:${RABBITMQ_DEFAULT_PASS}@rabbit:5672",
+        "--port=8888",
+      ]
+    ports:
       - ${FLOWER_EXPOSE_PORT}:8888
     logging:
-      driver: 'none'
+      driver: "none"
+    restart: always
 
   pgadmin:
     image: dpage/pgadmin4
@@ -48,29 +56,9 @@ services:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
     volumes:
-       - ./data/pgadmin:/root/.pgadmin
+      - ./data/pgadmin:/root/.pgadmin
     ports:
       - "${PGADMIN_PORT}:80"
     logging:
       driver: none
-    restart: unless-stopped
-
-
-  # web:
-  #   build: .
-  #   volumes:
-  #     - .:/app
-  #   ports:
-  #     - "${WEB_HOST}:${WEB_HOST}"
-  #   depends_on:
-  #     - postgres
-  #     - redis
-  #   command: python manage.py runserver 0.0.0.0:${WEB_HOST}
-  
-  # worker:
-  #   build: .
-  #   command: watchmedo auto-restart --recursive -p '*.py' -- python -m celery -A base worker --beat -l info
-  #   volumes:
-  #     - .:/app
-  #   depends_on:
-  #     - web
+    restart: always
