--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ python-dotenv = "^0.15.0"
 graphene-django = "^2.13.0"
 drf-yasg = {extras = ["validation"], version = "^1.20.0"}
 djangorestframework-simplejwt = "^4.6.0"
+Faker = "^5.0.1"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.4"
