--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ graphene-django = "^2.13.0"
 drf-yasg = {extras = ["validation"], version = "^1.20.0"}
 djangorestframework-simplejwt = "^4.6.0"
 Faker = "^5.0.1"
+djangorestframework-camel-case = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.4"
