--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ drf-yasg = {extras = ["validation"], version = "^1.20.0"}
 djangorestframework-simplejwt = "^4.6.0"
 Faker = "^5.0.1"
 djangorestframework-camel-case = "^1.2.0"
+coverage = "^5.5"
+flake8 = "^3.9.2"
+selenium = "^3.141.0"
+tox = "^3.23.1"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.4"
