--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,4 @@
 [flake8]
-exclude = .git,*migrations*
+exclude = .git,*migrations*, manage.py, *__init__.py
 max-line-length = 119
+ignore = F405, F403
