--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -17,6 +17,8 @@ jobs:
         python-version: [3.8]
 
     steps:
+    - name: add permission to delete
+      run: sudo chown -R $USER:$USER /home/linhnvhicts/actions-runner/_work/base.django
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
