--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -10,12 +10,12 @@ on:
 
 jobs:
   build:
-
+    
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
       matrix:
-        python-version: 3.8
+        python-version: [3.8]
 
     steps:
     - uses: actions/checkout@v2
