--- a/.github/workflows/django_testing.yml
+++ b/.github/workflows/django_testing.yml
@@ -1,4 +1,4 @@
-name: Django CI
+name: Django CI/CD
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
     - master
 
 jobs:
-  test:
+  build:
 
     runs-on: ubuntu-latest
     strategy:
@@ -23,13 +23,23 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Cache Dependencies
+      uses: actions/cache@v2
+      id: cache
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
     - name: Install Dependencies
+      if: steps.cache.outputs.cache-hit != 'true'
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        cp .env.example .env
     - name: Start containers
-      run: docker-compose -f "docker-compose.yml" up -d --build
+      run: |
+        cp .env.example .env
+        docker-compose -f "docker-compose.yml" up -d --build
     - name: Run Tests
       run: |
         sleep 20
