--- a/.github/workflows/django_testing.yml
+++ b/.github/workflows/django_testing.yml
@@ -27,15 +27,15 @@ jobs:
       uses: actions/cache@v2
       id: cache
       with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        path: ./dependencies/
+        key: ${{ runner.os }}-dependencies-${{ hashFiles('**/requirements.txt') }}
         restore-keys: |
-          ${{ runner.os }}-pip-
+          ${{ runner.os }}-dependencies-
     - name: Install Dependencies
-      if: steps.cache.outputs.cache-hit != 'true'
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+      if: steps.cache.outputs.cache-hit != 'true'
     - name: Start containers
       run: |
         cp .env.example .env
