--- a/.github/workflows/django_testing.yml
+++ b/.github/workflows/django_testing.yml
@@ -12,30 +12,29 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.8]
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.8'
+
     - name: Cache Dependencies
       uses: actions/cache@v2
       id: cache
       with:
-        path: ./dependencies/
-        key: ${{ runner.os }}-dependencies-${{ hashFiles('**/requirements.txt') }}
+        path: ${{ env.pythonLocation }}/lib/python3.8/site-packages/*
+        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
         restore-keys: |
-          ${{ runner.os }}-dependencies-
+          ${{ runner.os }}-pip-
+          ${{ runner.os }}-
     - name: Install Dependencies
+      if: steps.cache.outputs.cache-hit != 'true'
       run: |
+        echo "Installing dependencies and caching them."
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-      if: steps.cache.outputs.cache-hit != 'true'
     - name: Start containers
       run: |
         cp .env.example .env
