--- a/.github/workflows/django_testing.yml
+++ b/.github/workflows/django_testing.yml
@@ -24,7 +24,7 @@ jobs:
       uses: actions/cache@v2
       id: cache
       with:
-        path: ~/.cache/pip
+        path: ${{ env.pythonLocation }}/lib/python3.8.10/site-packages/*
         key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
         restore-keys: |
           ${{ runner.os }}-pip-
