--- a/.github/workflows/django_testing.yml
+++ b/.github/workflows/django_testing.yml
@@ -24,7 +24,7 @@ jobs:
       uses: actions/cache@v2
       id: cache
       with:
-        path: ${{ env.pythonLocation }}/lib/python3.8/site-packages
+        path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
         restore-keys: |
           ${{ runner.os }}-pip-
@@ -35,6 +35,7 @@ jobs:
         echo "Installing dependencies and caching them."
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip cache dir
     - name: Start containers
       run: |
         cp .env.example .env
