--- a/.github/workflows/django_testing.yml
+++ b/.github/workflows/django_testing.yml
@@ -19,17 +19,17 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.8'
-
-    - name: Cache Dependencies
-      uses: actions/cache@v2
-      id: cache
-      with:
-        path: /home/runner/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
+    # TODO: still fixing
+    # - name: Cache Dependencies
+    #   uses: actions/cache@v2
+    #   id: cache
+    #   with:
+    #     path: /home/runner/.cache/pip
+    #     key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+    #     restore-keys: |
+    #       ${{ runner.os }}-pip-
     - name: Install Dependencies
-      if: steps.cache.outputs.cache-hit != 'true'
+      # if: steps.cache.outputs.cache-hit != 'true'
       run: |
         echo "Installing dependencies and caching them."
         python -m pip install --upgrade pip
