--- a/.github/workflows/django_testing.yml
+++ b/.github/workflows/django_testing.yml
@@ -9,8 +9,10 @@ on:
     - master
 
 jobs:
-  setup:
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
@@ -18,10 +20,6 @@ jobs:
       with:
         python-version: '3.8'
 
-  build:
-    needs: setup
-    runs-on: ubuntu-latest
-    steps:
     - name: Cache Dependencies
       uses: actions/cache@v2
       id: cache
@@ -40,12 +38,9 @@ jobs:
         pip cache dir
         cp .env.example .env
         docker-compose -f "docker-compose.yml" up -d --build
-  test:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
     - name: Run Tests
       run: |
+        sleep 10
         coverage run manage.py test -v 2 && coverage report
         flake8
     - name: Stop containers
