--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ jobs:
           port: ${{ secrets.PORT }}
           script: |
             eval "$(ssh-agent -s)"
+            ssh-add ~/.ssh/id_ed25519
             ssh-add -l
             cd base.django/
             git pull
