--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,46 @@ on:
     - master
 
 jobs:
-  deploy:
+  build-and-test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+
+    - name: Cache Dependencies
+      uses: actions/cache@v2
+      id: cache
+      with:
+        path: ${{ env.pythonLocation }}
+        key: ${{ env.pythonLocation }}-pip-${{ hashFiles('requirements.txt') }}
+
+    - name: Install Dependencies
+      if: steps.cache.outputs.cache-hit != 'true'
+      run: |
+        echo "Installing dependencies and caching them."
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        
+    - name: Start containers
+      run: |
+        pip cache dir
+        cp .env.example .env
+        docker-compose -f "docker-compose.yml" up -d --build
+
+    - name: Run Tests
+      run: |
+        sleep 10
+        coverage run manage.py test -v 2 && coverage report
+        flake8
+
+    - name: Stop containers
+      if: always()
+      run: docker-compose -f "docker-compose.yml" down
+
+  deploy-to-server:
     runs-on: ubuntu-latest
     steps:
       - name: Install SSH Key
