--- a/.github/workflows/django_testing.yml
+++ b/.github/workflows/django_testing.yml
@@ -46,3 +46,11 @@ jobs:
     - name: Stop containers
       if: always()
       run: docker-compose -f "docker-compose.yml" down
+    
+    - name: Upload pytest test results
+      uses: actions/upload-artifact@v2
+      with:
+        name: test-results
+        path: test-results.txt
+      # Use always() to always run this step to publish test results when there are test failures
+      if: ${{ always() }}
