--- a/.github/workflows/django_testing.yml
+++ b/.github/workflows/django_testing.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Run Tests
       run: |
         sleep 10
-        coverage run manage.py test -v 2 && coverage report
+        coverage run manage.py test -v 2 && coverage report && coverage html
         flake8
 
     - name: Stop containers
@@ -51,6 +51,6 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: test-results
-        path: test-results.txt
+        path: htmlcov
       # Use always() to always run this step to publish test results when there are test failures
       if: ${{ always() }}
