--- a/.github/workflows/django_testing.yml
+++ b/.github/workflows/django_testing.yml
@@ -41,7 +41,7 @@ jobs:
       run: |
         sleep 10
         coverage run manage.py test -v 2 && coverage report && coverage html
-        flake8
+        flake8 --output-file=flake8_style_results.txt
 
     - name: Stop containers
       if: always()
@@ -51,6 +51,8 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: test-results
-        path: htmlcov
+        path: |
+          htmlcov
+          flake8_style_results.txt
       # Use always() to always run this step to publish test results when there are test failures
       if: ${{ always() }}
