--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
       run: |
         sleep 10
         coverage run manage.py test -v 2 && coverage report && coverage html
-        flake8 --max-complexity 15 --output-file=flake8_style_results.txt
+        flake8 --output-file=flake8_style_results.txt
 
     - name: Stop containers
       if: always()
@@ -54,7 +54,7 @@ jobs:
           flake8_style_results.txt
       # Use always() to always run this step to publish test results when there are test failures
       if: ${{ always() }}
-      
+
   deploy-to-server:
     needs: build-and-test
     runs-on: ubuntu-latest
