--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,6 +58,8 @@ jobs:
   deploy-to-server:
     needs: build-and-test
     runs-on: ubuntu-latest
+    environment:
+      name: Dev
     steps:
       - name: executing remote ssh commands using ssh key
         uses: appleboy/ssh-action@master
